[project]
name = "ecst"
version = "0.0.8"
authors = [{ name = "Mike Francis", email = "mikeffrancis@gmail.com" }]
description = "Create local tunnels and sessions to AWS ECS services running in a VPC."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mikefrancis/ecstunnel"
"Bug Tracker" = "https://github.com/mikefrancis/ecstunnel/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
